@@ -1,3 +1,8 @@
+2008-02-18  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/plot.shapes.R : handle graphs which contain 
+	no edges at all
+
 2008-02-17  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/plot.shapes.R
